--- a/ResContainer.de.resx
+++ b/ResContainer.de.resx
@@ -145,7 +145,7 @@
     <value>Hinweis </value>
   </data>
 	<data name="Vacation_SubEmployee" xml:space="preserve">
-    <value>Mitarbeiter </value>
+    <value>Wählen Sie den Ersatzmitarbeiter aus</value>
   </data>
 	<data name="Vacation_SubFrom" xml:space="preserve">
     <value>mit </value>
@@ -1813,8 +1813,7 @@ Einheiten</value>
 		<value>Dokument wird mit korrigiert</value>
 	</data>
 	<data name="MSG_DataMergedWithCorrected" xml:space="preserve">
-		<value>Als Ergebnis dieser Operation ALLE Daten des aktuellen Dokuments
-wird mit dem zu korrigierenden Dokument in Einklang gebracht.
+		<value>Als Ergebnis dieser Operation ALLE Daten des aktuellen Dokuments wird mit dem zu korrigierenden Dokument in Einklang gebracht.
 
 Möchten Sie diesen Vorgang wirklich ausführen?</value>
 	</data>
@@ -3233,7 +3232,7 @@ Fehler beim Abrufen der zu kopierenden Daten!</value>
 		<value>Signaturen von gedruckten Formularen</value>
 	</data>
 	<data name="TTN_lblSectionDocuments" xml:space="preserve">
-		<value>Dokumente</value>
+		<value>Gründungsdokumente</value>
 	</data>
 	<data name="TTN_lblSectionCurator" xml:space="preserve">
 		<value>Kurator</value>
@@ -3700,5 +3699,122 @@ Löschen Sie zuerst die resultierende Rechnung.</value>
 	</data>
 	<data name="TTN_lblChooseContact" xml:space="preserve">
 		<value>Wählen Sie einen Kontakt</value>
+	</data>
+	<data name="TTN_lblChoiceEmployee" xml:space="preserve">
+		<value>Mitarbeiterauswahl</value>
+	</data>
+	<data name="Vacation_ErrSubDateSubstitution" xml:space="preserve">
+		<value>Ersatzdaten entsprechen nicht den Urlaubsterminen.</value>
+	</data>
+	<data name="Vacation_SubEmployeeLbl" xml:space="preserve">
+		<value>Ersatz Mitarbeiter</value>
+	</data>
+	<data name="TTN_mgsReplaceValues" xml:space="preserve">
+		<value>Werte aus dem korrigierten Dokument werden in allen Feldern des Formulars festgelegt. Fortfahren?</value>
+	</data>
+	<data name="TTN_lblSaveDocument" xml:space="preserve">
+		<value>Dokument speichern</value>
+	</data>
+	<data name="TTN_lblOpenInDocumentsArchive" xml:space="preserve">
+		<value>im Dokumentenarchiv öffnen</value>
+	</data>
+	<data name="TTN_lblContinueEditing" xml:space="preserve">
+		<value>Bearbeitung fortsetzen</value>
+	</data>
+	<data name="TTN_msgNeedSaveDocument" xml:space="preserve">
+		<value>Speichern Sie das Dokument, um es zu bearbeiten</value>
+	</data>
+	<data name="TTN_lblType" xml:space="preserve">
+		<value>Geben Sie ein</value>
+	</data>
+	<data name="TTN_lblSteward" xml:space="preserve">
+		<value>Steward</value>
+	</data>
+	<data name="TTN_lblCreateContact" xml:space="preserve">
+		<value>Erstellen Sie einen neuen Kontakt</value>
+	</data>
+	<data name="lblGridGroupingPanelEmptyText" xml:space="preserve">
+		<value>Ziehen Sie eine Spaltenüberschrift hierher, um nach dieser Spalte zu gruppieren</value>
+	</data>
+	<data name="TTN_msgNoMris" xml:space="preserve">
+		<value>Kein Produkt angegeben</value>
+	</data>
+	<data name="TTN_msgTaxInflated" xml:space="preserve">
+		<value>Rundungsbedingt waren die Steuern leicht aufgebläht.</value>
+	</data>
+	<data name="TTN_msgVsegoChanged" xml:space="preserve">
+		<value>Durch die Rundung wurde der Gesamtwert geändert.</value>
+	</data>
+	<data name="TTN_msgRoundingNotSuccessful." xml:space="preserve">
+		<value>Rundung ist nicht erfolgreich.</value>
+	</data>
+	<data name="TTN_msgAccountNotAvailable" xml:space="preserve">
+		<value>Girokonto nicht verfügbar</value>
+	</data>
+	<data name="TTN_ntfPersonStoreDocument" xml:space="preserve">
+		<value>Das Abrechnungskonto stimmt nicht mit dem Konto im Vertrag überein</value>
+	</data>
+	<data name="TTN_ntfPersonStoreEnclosure" xml:space="preserve">
+		<value>Das aktuelle Konto stimmt nicht mit dem Konto in der Anwendung überein</value>
+	</data>
+	<data name="TTN_ntfPersonNotTested" xml:space="preserve">
+		<value>Person nicht verifiziert</value>
+	</data>
+	<data name="TTN_ntfPersonNotOKPO" xml:space="preserve">
+		<value>Die Person hat kein OKPO</value>
+	</data>
+	<data name="TTN_nntfPersonNotMatchContract" xml:space="preserve">
+		<value>Die Person stimmt mit keiner Person im Vertrag überein</value>
+	</data>
+	<data name="TTN_nntfPersonNotMatchEnclosure" xml:space="preserve">
+		<value>Die Person stimmt mit keiner Person in der Anwendung überein</value>
+	</data>
+	<data name="TTN_ntfNoLinkContractAnfEnclosure" xml:space="preserve">
+		<value>Es besteht keine Verbindung der Anwendung mit dem Vertrag! Anwendungscode: </value>
+	</data>
+	<data name="TTN_ntfGetTypeByContractNoForm" xml:space="preserve">
+		<value>Versuchen Sie, die Art der Abrechnung aus dem Vertrag ohne elektronisches Formular zu erhalten! Vertragscode: </value>
+	</data>
+	<data name="TTN_msgChosenCorrectedSelf" xml:space="preserve">
+		<value>Das aktuelle Dokument wird als korrigiertes Dokument ausgewählt. Wählen Sie ein anderes Dokument als das aktuelle aus.</value>
+	</data>
+	<data name="TTN_ntfNoCorrectedDocument" xml:space="preserve">
+		<value>Wählen Sie einen Korrekturbeleg aus.</value>
+	</data>
+	<data name="TTN_msg_Больше1Корректирующего" xml:space="preserve">
+		<value>Fehler! Das ausgewählte Dokument wird gleichzeitig mit mehreren Dokumenten korrigiert.</value>
+	</data>
+	<data name="_Msg_РазныеСвойства" xml:space="preserve">
+		<value>Die Werte des Felds {0} in den ausgewählten Sendepaketen unterscheiden sich. Hinzufügung von Dienstleistungen zum Abschlusszertifikat</value>
+	</data>
+	<data name="_Msg_НеСовпадаютСвойства" xml:space="preserve">
+		<value>Die Felder {0} in den ausgewählten Flurstücken stimmen nicht mit den im Akt angegebenen überein. Das Hinzufügen der Services zum Abschlusszertifikat ist nicht möglich.</value>
+	</data>
+	<data name="btnOldVersion" xml:space="preserve">
+		<value>Alte Version</value>
+	</data>
+	<data name="btnNewVersion" xml:space="preserve">
+		<value>Neue Version</value>
+	</data>
+	<data name="TTN_lblSectionShipperToGo" xml:space="preserve">
+		<value>Gleich wie Lieferant:</value>
+	</data>
+	<data name="TTN_lblSectionPayerToGp" xml:space="preserve">
+		<value>Wie beim Zahler:</value>
+	</data>
+	<data name="TTN_msgGridNoUsl" xml:space="preserve">
+		<value>Diese Position hat keine Position beim Dienst angegeben. Um einen Dienst hinzuzufügen, klicken Sie auf der Tastatur auf die Schaltfläche "Dienst hinzufügen" oder "Insert".</value>
+	</data>
+	<data name="TTN_msgGridNoMris" xml:space="preserve">
+		<value>Bei diesem Artikel ist kein Artikel mit der Ware angegeben. Um ein Produkt hinzuzufügen, klicken Sie auf der Tastatur auf die Schaltfläche "Produkt hinzufügen" oder "Insert".</value>
+	</data>
+	<data name="TTN_lblGoAndShipper" xml:space="preserve">
+		<value>Bringen Sie den Versender und den Lieferanten zusammen</value>
+	</data>
+	<data name="TTN_lblGpAndPayer" xml:space="preserve">
+		<value>Passen Sie den Empfänger und den Zahler an</value>
+	</data>
+	<data name="TTN_msgNotSignedCurator" xml:space="preserve">
+		<value>Der Frachtbrief wird nicht vom Vertragsverwalter unterschrieben</value>
 	</data>
 </root>
