--- a/ResContainer.resx
+++ b/ResContainer.resx
@@ -2538,7 +2538,7 @@ unit</value>
     <value>Note</value>
   </data>
 	<data name="Vacation_SubEmployee" xml:space="preserve">
-    <value>Employee</value>
+    <value>Select the substitution employee</value>
   </data>
 	<data name="Vacation_SubFrom" xml:space="preserve">
     <value>with</value>
@@ -2783,8 +2783,7 @@ unit</value>
 		<value>Document is corrected with</value>
 	</data>
 	<data name="MSG_DataMergedWithCorrected" xml:space="preserve">
-		<value>As a result of this operation ALL data of the current document
-will be brought into line with the document being corrected.
+		<value>As a result of this operation ALL data of the current document will be brought into line with the document being corrected.
 
 Are you sure you want to perform this operation ?</value>
 	</data>
@@ -3235,7 +3234,7 @@ Are you sure you want to perform this operation ?</value>
 		<value>Signatures of printed forms</value>
 	</data>
 	<data name="TTN_lblSectionDocuments" xml:space="preserve">
-		<value>Documentation</value>
+		<value>Founding documents</value>
 	</data>
 	<data name="TTN_lblSectionCurator" xml:space="preserve">
 		<value>Curator</value>
@@ -3702,5 +3701,122 @@ First, delete the resulting invoice.</value>
 	</data>
 	<data name="TTN_lblChooseContact" xml:space="preserve">
 		<value>Choose a contact</value>
+	</data>
+	<data name="TTN_lblChoiceEmployee" xml:space="preserve">
+		<value>Employee selection</value>
+	</data>
+	<data name="Vacation_ErrSubDateSubstitution" xml:space="preserve">
+		<value>Replacement dates do not correspond to vacation dates.</value>
+	</data>
+	<data name="Vacation_SubEmployeeLbl" xml:space="preserve">
+		<value>Substitute employee</value>
+	</data>
+	<data name="TTN_mgsReplaceValues" xml:space="preserve">
+		<value>Values from the corrected document will be set in all fields of the form. Continue?</value>
+	</data>
+	<data name="TTN_lblSaveDocument" xml:space="preserve">
+		<value>Saving the document</value>
+	</data>
+	<data name="TTN_msgNeedSaveDocument" xml:space="preserve">
+		<value>To edit, save the document</value>
+	</data>
+	<data name="TTN_lblOpenInDocumentsArchive" xml:space="preserve">
+		<value>open in the Documents Archive</value>
+	</data>
+	<data name="TTN_lblContinueEditing" xml:space="preserve">
+		<value>continue editing</value>
+	</data>
+	<data name="TTN_lblType" xml:space="preserve">
+		<value>Type</value>
+	</data>
+	<data name="TTN_lblSteward" xml:space="preserve">
+		<value>Steward</value>
+	</data>
+	<data name="TTN_lblCreateContact" xml:space="preserve">
+		<value>Create a new contact</value>
+	</data>
+	<data name="lblGridGroupingPanelEmptyText" xml:space="preserve">
+		<value>Drag a column header here to group by that column</value>
+	</data>
+	<data name="TTN_msgNoMris" xml:space="preserve">
+		<value>No product specified.</value>
+	</data>
+	<data name="TTN_msgTaxInflated" xml:space="preserve">
+		<value>As a result of rounding, taxes were slightly inflated.</value>
+	</data>
+	<data name="TTN_msgVsegoChanged" xml:space="preserve">
+		<value>As a result of rounding, the Total value has been changed.</value>
+	</data>
+	<data name="TTN_msgRoundingNotSuccessful." xml:space="preserve">
+		<value>Rounding is not successful.</value>
+	</data>
+	<data name="TTN_msgAccountNotAvailable" xml:space="preserve">
+		<value>current account not available</value>
+	</data>
+	<data name="TTN_ntfPersonStoreDocument" xml:space="preserve">
+		<value>settlement account does not match the account in the contract</value>
+	</data>
+	<data name="TTN_ntfPersonStoreEnclosure" xml:space="preserve">
+		<value>current account does not match the account in the application</value>
+	</data>
+	<data name="TTN_ntfPersonNotTested" xml:space="preserve">
+		<value>person has not been tested</value>
+	</data>
+	<data name="TTN_ntfPersonNotOKPO" xml:space="preserve">
+		<value>the person has no OKPO</value>
+	</data>
+	<data name="TTN_nntfPersonNotMatchContract" xml:space="preserve">
+		<value>the person does not match any person in the contract</value>
+	</data>
+	<data name="TTN_nntfPersonNotMatchEnclosure" xml:space="preserve">
+		<value>the person does not match any person in the application</value>
+	</data>
+	<data name="TTN_ntfNoLinkContractAnfEnclosure" xml:space="preserve">
+		<value>There is no connection of the application with the contract! Application code: </value>
+	</data>
+	<data name="TTN_ntfGetTypeByContractNoForm" xml:space="preserve">
+		<value>Attempt to get the type of settlement from the contract without an electronic form! Contract Code: </value>
+	</data>
+	<data name="TTN_msgChosenCorrectedSelf" xml:space="preserve">
+		<value>The current document is selected as the corrected document. Select a document other than the current one.</value>
+	</data>
+	<data name="TTN_ntfNoCorrectedDocument" xml:space="preserve">
+		<value>Select a correction document.</value>
+	</data>
+	<data name="TTN_msg_Больше1Корректирующего" xml:space="preserve">
+		<value>Error! Selected document has been corrected with more than 1 document at the same time.</value>
+	</data>
+	<data name="_Msg_РазныеСвойства" xml:space="preserve">
+		<value>Values of the {0} field in the selected send parcels are different. Addition of services rendered to the certificate of completion</value>
+	</data>
+	<data name="_Msg_НеСовпадаютСвойства" xml:space="preserve">
+		<value>Fields {0} in the selected parcels do not match the ones specified in the act. Adding the services rendered to the certificate of completion is impossible.</value>
+	</data>
+	<data name="btnOldVersion" xml:space="preserve">
+		<value>Alte Version</value>
+	</data>
+	<data name="btnNewVersion" xml:space="preserve">
+		<value>New version</value>
+	</data>
+	<data name="TTN_lblSectionShipperToGo" xml:space="preserve">
+		<value>Same as supplier:</value>
+	</data>
+	<data name="TTN_lblSectionPayerToGp" xml:space="preserve">
+		<value>Same as payer:</value>
+	</data>
+	<data name="TTN_msgGridNoUsl" xml:space="preserve">
+		<value>This item is not specified any position with the service. To add a service, click on the "Add service" or "Insert" button on the keyboard.</value>
+	</data>
+	<data name="TTN_msgGridNoMris" xml:space="preserve">
+		<value>This item is not specified any item with the goods. To add a product, click on the button "Add product" or "Insert" on the keyboard.</value>
+	</data>
+	<data name="TTN_lblGoAndShipper" xml:space="preserve">
+		<value>Match the shipper and the supplier</value>
+	</data>
+	<data name="TTN_lblGpAndPayer" xml:space="preserve">
+		<value>Passen Sie den Empfänger und den Zahler an</value>
+	</data>
+	<data name="TTN_msgNotSignedCurator" xml:space="preserve">
+		<value>The waybill is not signed by the curator of the contract</value>
 	</data>
 </root>
