--- a/ResContainer.ru.resx
+++ b/ResContainer.ru.resx
@@ -1199,7 +1199,7 @@
     <value>Всего по счету</value>
   </data>
 	<data name="lblItogoProduct" xml:space="preserve">
-    <value>Итого по продуктам</value>
+    <value>Итого по товарам</value>
   </data>
 	<data name="lblItogoUsl" xml:space="preserve">
     <value>Итого по оказанным услугам</value>
@@ -1854,9 +1854,7 @@
     <value>Документ скорректирован с помощью</value>
   </data>
 	<data name="MSG_DataMergedWithCorrected" xml:space="preserve">
-    <value>В результате этой операции ВСЕ данные текущего документа
-будут приведены в соответствие с корректируемым документом.
-
+    <value>В результате этой операции ВСЕ данные текущего документа будут приведены в соответствие с корректируемым документом.
 Вы уверены, что хотите выполнить данную операцию?</value>
   </data>
 	<data name="MSG_DocAlreadyCorrected" xml:space="preserve">
@@ -2606,7 +2604,7 @@
     <value>документ не доступен</value>
   </data>
 	<data name="_Msg_ЕдИзмерения" xml:space="preserve">
-    <value>Для продуктов единица измерения является обязательной</value>
+    <value>Для товаров единица измерения является обязательной</value>
   </data>
 	<data name="_Msg_Количество" xml:space="preserve">
     <value>Не указазано количество</value>
@@ -2813,7 +2811,7 @@
     <value>Примечание</value>
   </data>
 	<data name="Vacation_SubEmployee" xml:space="preserve">
-    <value>Сотрудник</value>
+    <value>Выберите замещающего сотрудника</value>
   </data>
 	<data name="Vacation_SubFrom" xml:space="preserve">
     <value>с</value>
@@ -3077,7 +3075,7 @@
 		<value>склад не соответствует плательщику</value>
 	</data>
 	<data name="TTN_ntfRussianNameNotMatchProduct" xml:space="preserve">
-		<value>русское название не соответствует продукту</value>
+		<value>русское название не соответствует товару</value>
 	</data>
 	<data name="msgIN" xml:space="preserve">
 		<value>в</value>
@@ -3089,7 +3087,7 @@
 		<value>не соответствует договору</value>
 	</data>
 	<data name="TTN_ntfLatinNameNotMatchProduct" xml:space="preserve">
-		<value>латинское название не соответствует продукту</value>
+		<value>латинское название не соответствует товару</value>
 	</data>
 	<data name="TTN_ntfDocumentNotAvailable" xml:space="preserve">
 		<value>документ не доступен</value>
@@ -3245,7 +3243,7 @@
 		<value>Подписанты печатных форм</value>
 	</data>
 	<data name="TTN_lblSectionDocuments" xml:space="preserve">
-		<value>Документы</value>
+		<value>Документы-основания</value>
 	</data>
 	<data name="TTN_lblSectionCurator" xml:space="preserve">
 		<value>Куратор</value>
@@ -3362,7 +3360,7 @@
 		<value>у лица отсутствует реквизиты на дату документа</value>
 	</data>
 	<data name="TTN_ntfStoreAccountDate" xml:space="preserve">
-		<value>расчетный счет не действует дату документа</value>
+		<value>расчетный счет не действует на дату документа</value>
 	</data>
 	<data name="TTN_ntfPersonPosition" xml:space="preserve">
 		<value>должность не соответствует лицу</value>
@@ -3600,7 +3598,7 @@
 		<value>Цена</value>
 	</data>
 	<data name="TTN_lblProductKits" xml:space="preserve">
-		<value>наборы продукта</value>
+		<value>наборы товара</value>
 	</data>
 	<data name="TTN_lblSetCost" xml:space="preserve">
 		<value>Набор расходов со склада</value>
@@ -3712,5 +3710,122 @@
 	</data>
 	<data name="TTN_lblChooseContact" xml:space="preserve">
 		<value>Выберите контакт</value>
+	</data>
+	<data name="TTN_lblChoiceEmployee" xml:space="preserve">
+		<value>Выбор сотрудника</value>
+	</data>
+	<data name="Vacation_ErrSubDateSubstitution" xml:space="preserve">
+		<value>Даты замещения не соответствуют датам отпуска.</value>
+	</data>
+	<data name="Vacation_SubEmployeeLbl" xml:space="preserve">
+		<value>Замещающий сотрудник</value>
+	</data>
+	<data name="TTN_mgsReplaceValues" xml:space="preserve">
+		<value>Во все поля формы будут установлены значения из корректируемого документа. Продолжить?</value>
+	</data>
+	<data name="TTN_lblSaveDocument" xml:space="preserve">
+		<value>Сохранение документа</value>
+	</data>
+	<data name="TTN_msgNeedSaveDocument" xml:space="preserve">
+		<value>Для редактирования сохраните документ</value>
+	</data>
+	<data name="TTN_lblOpenInDocumentsArchive" xml:space="preserve">
+		<value>открыть в Архиве Документов</value>
+	</data>
+	<data name="TTN_lblContinueEditing" xml:space="preserve">
+		<value>продолжить редактирование</value>
+	</data>
+	<data name="TTN_lblType" xml:space="preserve">
+		<value>Тип</value>
+	</data>
+	<data name="TTN_lblSteward" xml:space="preserve">
+		<value>Распорядитель</value>
+	</data>
+	<data name="TTN_lblCreateContact" xml:space="preserve">
+		<value>Создать новый контакт</value>
+	</data>
+	<data name="lblGridGroupingPanelEmptyText" xml:space="preserve">
+		<value>Перетащите заголовок столбца сюда, чтобы сгруппировать по этому столбцу</value>
+	</data>
+	<data name="TTN_msgNoMris" xml:space="preserve">
+		<value>Не указано ни одного товара.</value>
+	</data>
+	<data name="TTN_msgTaxInflated" xml:space="preserve">
+		<value>В результате округления были слегка завышены налоги.</value>
+	</data>
+	<data name="TTN_msgVsegoChanged" xml:space="preserve">
+		<value>В результате округления было изменено значение Всего.</value>
+	</data>
+	<data name="TTN_msgRoundingNotSuccessful." xml:space="preserve">
+		<value>Округление прошло не удачно.</value>
+	</data>
+	<data name="TTN_msgAccountNotAvailable" xml:space="preserve">
+		<value>расчетный счет не доступен</value>
+	</data>
+	<data name="TTN_ntfPersonStoreDocument" xml:space="preserve">
+		<value>расчетный счет не соответствует счету в договоре</value>
+	</data>
+	<data name="TTN_ntfPersonStoreEnclosure" xml:space="preserve">
+		<value>расчетный счет не соответствует счету в приложении</value>
+	</data>
+	<data name="TTN_ntfPersonNotTested" xml:space="preserve">
+		<value>лицо не проверено</value>
+	</data>
+	<data name="TTN_ntfPersonNotOKPO" xml:space="preserve">
+		<value>у лица отсутствует ОКПО</value>
+	</data>
+	<data name="TTN_nntfPersonNotMatchContract" xml:space="preserve">
+		<value>лицо не соответствует ни одному лицу в договоре</value>
+	</data>
+	<data name="TTN_nntfPersonNotMatchEnclosure" xml:space="preserve">
+		<value>лицо не соответствует ни одному лицу в приложении</value>
+	</data>
+	<data name="TTN_ntfNoLinkContractAnfEnclosure" xml:space="preserve">
+		<value>Отсутствует связь приложения с договором! Код приложения: </value>
+	</data>
+	<data name="TTN_ntfGetTypeByContractNoForm" xml:space="preserve">
+		<value>Попытка получить вид взаиморасчета у договора без электронной формы! Код договора: </value>
+	</data>
+	<data name="TTN_msgChosenCorrectedSelf" xml:space="preserve">
+		<value>В качестве корректируемого документа выбран текущий документ. Выберите документ, отличный от текущего.</value>
+	</data>
+	<data name="TTN_ntfNoCorrectedDocument" xml:space="preserve">
+		<value>Выберите корректировочный документ.</value>
+	</data>
+	<data name="TTN_msg_Больше1Корректирующего" xml:space="preserve">
+		<value>Ошибка! Выбранный документ одновременно скорректирован с помощью нескольких документов.</value>
+	</data>
+	<data name="_Msg_РазныеСвойства" xml:space="preserve">
+		<value>Значения поля {0} в выбранных участах отправок различно. Добавление оказанных услуг в акт выполненных работ невозможно.</value>
+	</data>
+	<data name="_Msg_НеСовпадаютСвойства" xml:space="preserve">
+		<value>Поля {0} в выбранных участах отправок не совпадают с указанными в акте. Добавление оказанных услуг в акт выполненных работ невозможно.</value>
+	</data>
+	<data name="btnOldVersion" xml:space="preserve">
+		<value>Старая версия</value>
+	</data>
+	<data name="btnNewVersion" xml:space="preserve">
+		<value>Новая версия</value>
+	</data>
+	<data name="TTN_lblSectionShipperToGo" xml:space="preserve">
+		<value>Совпадает с поставщиком:</value>
+	</data>
+	<data name="TTN_lblSectionPayerToGp" xml:space="preserve">
+		<value>Совпадает с плательщиком:</value>
+	</data>
+	<data name="TTN_msgGridNoUsl" xml:space="preserve">
+		<value>В данной ТТН не задана ни одна позиция с услугой. Для добавления услуги нажмите на кнопку «Добавить услугу» или «Insert» на клавиатуре.</value>
+	</data>
+	<data name="TTN_msgGridNoMris" xml:space="preserve">
+		<value>В данной ТТН не задана ни одна позиция с товаром. Для добавления товара нажмите на кнопку «Добавить товар» или «Insert» на клавиатуре.</value>
+	</data>
+	<data name="TTN_lblGoAndShipper" xml:space="preserve">
+		<value>Привести в соответствие грузоотправителя и поставщика</value>
+	</data>
+	<data name="TTN_lblGpAndPayer" xml:space="preserve">
+		<value>Привести в соответствие грузополучателя и плательщика</value>
+	</data>
+	<data name="TTN_msgNotSignedCurator" xml:space="preserve">
+		<value>Товарно-транспортная накладная не подписана куратором договора</value>
 	</data>
 </root>
