--- a/ResContainer.ru.resx
+++ b/ResContainer.ru.resx
@@ -3826,6 +3826,6 @@
 		<value>Привести в соответствие грузополучателя и плательщика</value>
 	</data>
 	<data name="TTN_msgNotSignedCurator" xml:space="preserve">
-		<value>Товарно-транспортная накладная не подписана куратором договора</value>
+		<value>не подписана куратором договора</value>
 	</data>
 </root>
